2010-05-19 S. Thiell <stephane.thiell@cea.fr>

	* doc/extras/vim/ftdetect/clustershell.vim: renamed clush.vim to
	clustershell.vim.

	* doc/extras/vim/syntax/clushconf.vim: renamed clush.vim to clushconf.vim
	and cleaned up old external groups keywords.

	* doc/extras/vim/syntax/groupsconf.vim: added vim syntax file for
	groups.conf (trac ticket #73).

2010-04-08 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Added __getstate__() and __setstate__() methods to support
	pickling of NodeSet objects.

	* scripts/clush.py: Add option flag -n NAMESPACE to specify groups.conf(5)
	namespace to use for regrouping displayed nodeset.

	* scripts/clush.py: Add -r (--regroup) option to display default groups
	in nodeset when possible.

2010-04-07 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Modified script to support new external "all nodes"
	upcall and node groups.

	* scripts/nodeset.py: Added command flags -l (list groups), -r (used to
	regroup nodes in groups), and also added option flag -n to specify desired
	namespace.

	* NodeSet.py: Added node group support with the help of the new NodeUtils
	module (trac ticket #41). Improved parser to support basic node/nodegroups
	arithmetics (trac ticket #44).

	* NodeUtils.py: New module that provides binding support to external node
	group sources (trac ticket #43).

2010-03-05 S. Thiell <stephane.thiell@cea.fr>

	* Worker/*.py: Do not forget to keep last line and generate an ev_read
	event when it does not contain EOL (trac ticket #66). Added tests.

2010-02-26 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.2 RC 1 released.

2010-02-25 S. Thiell <stephane.thiell@cea.fr>

	* Important code cleaning (use absolute imports, remove some unused
	imports, remove duplicate code, etc. thanks to pylint).

2010-02-22 S. Thiell <stephane.thiell@cea.fr>

	* scripts/nodeset.py: Change command syntax: operations are now specified
	inline between nodesets (trac ticket #45). Update doc and tests.
