@@ -1,0 +1,27 @@
+#
+#
+montana32: all,para,login,chassis1
+montana33: all,para,login,chassis1
+montana34: all,para,chassis2
+montana35: all,para,chassis2
+montana36: all,para,chassis3
+montana37: all,para,chassis3
+montana38: all,gpu
+montana39: all,gpu
+montana40: all,gpu
+montana41: all,gpu,overclock
+montana42: all,para,overclock
+montana43: all,para
+montana44: all,para
+montana45: all,para
+montana46: all,para
+montana47: all,para
+montana48: all,para
+montana49: all,para
+montana50: all,para
+montana51: all,para
+montana52: all,para
+montana53: all,para
+montana54: all,para
+montana55: all,para
+idaho: single
